<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.0</version>
    </parent>

    <properties>
        <springboot.version>2.7.0</springboot.version>

        <onnxModelGen.version>${project.version}</onnxModelGen.version>
        <platform.version>${project.version}</platform.version>

        <djl.version>0.18.0-SNAPSHOT</djl.version>
        <model-zoo.version>${djl.version}</model-zoo.version>
        <basicdataset.version>${djl.version}</basicdataset.version>
        <pytorch-engine.version>${djl.version}</pytorch-engine.version>
        <pytorch-model-zoo.version>${djl.version}</pytorch-model-zoo.version>

        <pytorch.version>1.11.0</pytorch.version>
        <pytorch-native-cu113.version>${pytorch.version}</pytorch-native-cu113.version>

        <commons-math3.version>3.6.1</commons-math3.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-csv.version>1.9.0</commons-csv.version>
        <commons-cli.version>1.4</commons-cli.version>
        <commons-io.version>2.11.0</commons-io.version>
        <commons-collections4.version>4.4</commons-collections4.version>

        <jupiter.version>5.8.2</jupiter.version>
        <lombok.version>1.18.24</lombok.version>
        <protobuf-java.version>3.19.4</protobuf-java.version>
        <ssj.version>3.3.1</ssj.version>
        <onnxruntime.version>1.10.0</onnxruntime.version>
        <slf4j.version>1.7.36</slf4j.version>
    </properties>



    <groupId>com.enpasos.muzero</groupId>
    <artifactId>muzero</artifactId>
    <version>0.4.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>onnxModelGen</module>
        <module>onnxWithRuntime</module>
        <module>platform</module>
        <module>games</module>
    </modules>



    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${springboot.version}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <artifactId>log4j-to-slf4j</artifactId>
                        <groupId>org.apache.logging.log4j</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf-java.version}</version>
            </dependency>
            <dependency>
                <groupId>com.enpasos.muzero</groupId>
                <artifactId>onnxModelGen</artifactId>
                <version>${onnxModelGen.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons-csv.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl</groupId>
                <artifactId>model-zoo</artifactId>
                <version>${model-zoo.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl</groupId>
                <artifactId>basicdataset</artifactId>
                <version>${basicdataset.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl.pytorch</groupId>
                <artifactId>pytorch-engine</artifactId>
                <version>${pytorch-engine.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl.pytorch</groupId>
                <artifactId>pytorch-model-zoo</artifactId>
                <version>${pytorch-model-zoo.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl.pytorch</groupId>
                <artifactId>pytorch-native-cu113</artifactId>
                <version>${pytorch-native-cu113.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commons-cli.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.umontreal.iro.simul</groupId>
                <artifactId>ssj</artifactId>
                <version>${ssj.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>commons-math3</artifactId>
                        <groupId>org.apache.commons</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.microsoft.onnxruntime</groupId>
                <artifactId>onnxruntime</artifactId>
                <version>${onnxruntime.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>com.enpasos.muzero</groupId>
                <artifactId>platform</artifactId>
                <version>${platform.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>log4j-to-slf4j</artifactId>
                        <groupId>org.apache.logging.log4j</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>slf4j-simple</artifactId>
                        <groupId>org.slf4j</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl.onnxruntime</groupId>
                <artifactId>onnxruntime-engine</artifactId>
                <version>0.18.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.enpasos.muzero</groupId>
                <artifactId>tictactoe</artifactId>
                <version>0.4.0-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <source>11</source>
                <target>11</target>
                <compilerArgs>
                    <arg>--add-exports</arg>
                    <arg>java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED</arg>
                    <arg>--add-exports</arg>
                    <arg>java.base/sun.security.validator=ALL-UNNAMED</arg>
                    <arg>--add-exports</arg>
                    <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                    <arg>--add-exports</arg>
                    <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                </compilerArgs>
                <forceJavacCompilerUse>true</forceJavacCompilerUse>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
                <execution>
                    <id>attach-sources</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>jar-no-fork</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.2</version>
        </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
                <execution>
                    <id>train</id>
                    <configuration>
                        <mainClass>ai.enpasos.muzero.platform.run.train.MuZero</mainClass>
                    </configuration>
                </execution>
                <execution>
                    <id>test</id>
                    <configuration>
                        <mainClass>ai.enpasos.muzero.platform.run.TicTacToeTest</mainClass>
                    </configuration>
                </execution>
                <execution>
                    <id>integrationtest</id>
                    <configuration>
                        <mainClass>ai.enpasos.muzero.integrationtest.TicTacToeTest</mainClass>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <archive>
                    <manifest>
                        <addClasspath>true</addClasspath>
                        <mainClass>ai.enpasos.muzero.platform.run.train.MuZero</mainClass>
                    </manifest>
                </archive>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
        </plugin>
        <plugin>
            <groupId>com.github.os72</groupId>
            <artifactId>protoc-jar-maven-plugin</artifactId>
            <version>3.11.4</version>
            <executions>
                <execution>
                    <phase>generate-sources</phase>
                    <goals>
                        <goal>run</goal>
                    </goals>
                    <configuration>
                        <addProtoSources>all</addProtoSources>
                        <includeMavenTypes>direct</includeMavenTypes>
                        <inputDirectories>
                            <include>src/main/protobuf</include>
                        </inputDirectories>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
        </pluginManagement>
    </build>
    <repositories>
        <repository>
            <id>djl.ai</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>
</project>
